--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.12",
+    "@heroicons/vue": "^2.0.17",
     "@node-steam/vdf": "^2.2.0",
+    "vdf-parser": "^1.2.1",
     "vue": "^3.2.47"
   },
   "devDependencies": {
