--- a/package.json
+++ b/package.json
@@ -1,40 +1,46 @@
 {
-  "name": "valve-keyvalues-parser",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore --fix src",
-    "format": "prettier .  --write"
-  },
-  "dependencies": {
-    "@headlessui/vue": "^1.7.12",
-    "@heroicons/vue": "^2.0.17",
-    "@node-steam/vdf": "^2.2.0",
-    "@vueuse/core": "^10.4.1",
-    "kvparser": "^1.0.2",
-    "vdf-parser": "^1.2.1",
-    "vue": "^3.2.47"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "@vitejs/plugin-vue": "^4.1.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "postcss": "^8.4.21",
-    "prettier": "3.0.0",
-    "tailwindcss": "^3.3.1",
-    "typescript": "^4.9.3",
-    "vite": "^5.1.3",
-    "vue-eslint-parser": "^9.3.1",
-    "vue-tsc": "^1.2.0"
-  }
+    "name": "valve-keyvalues-parser",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview",
+        "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore --fix src",
+        "format": "prettier .  --write"
+    },
+    "dependencies": {
+        "@headlessui/vue": "^1.7.12",
+        "@heroicons/vue": "^2.0.17",
+        "@node-steam/vdf": "^2.2.0",
+        "@radix-icons/vue": "^1.0.0",
+        "@vueuse/core": "^10.4.1",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "kvparser": "^1.0.2",
+        "radix-vue": "^1.5.2",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7",
+        "vdf-parser": "^1.2.1",
+        "vue": "^3.2.47"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.7.0",
+        "@typescript-eslint/parser": "^6.7.0",
+        "@vitejs/plugin-vue": "^4.1.0",
+        "@vue/eslint-config-typescript": "^12.0.0",
+        "autoprefixer": "^10.4.14",
+        "eslint": "^8.49.0",
+        "eslint-config-prettier": "^8.10.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-vue": "^9.17.0",
+        "postcss": "^8.4.21",
+        "prettier": "3.0.0",
+        "tailwindcss": "^3.3.1",
+        "typescript": "^4.9.3",
+        "vite": "^5.1.3",
+        "vue-eslint-parser": "^9.3.1",
+        "vue-tsc": "^1.2.0"
+    }
 }
